[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/knightAnim.png" type="Texture" id=1]
[ext_resource path="res://scenes/playerController.gd" type="Script" id=2]
[ext_resource path="res://scenes/SwordHitbox.gd" type="Script" id=3]
[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Dash.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Jump.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 28 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27, 26 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "block"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "dashNdodge"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 500, 300 )
collision_layer = 64
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitboxPivot" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="HitboxPivot"]
position = Vector2( 50, -10 )
collision_layer = 0
collision_mask = 528
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxPivot/Area2D"]
position = Vector2( 10, 8.5 )
shape = SubResource( 2 )
disabled = true

[node name="BlockPivot" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="BlockPivot"]
position = Vector2( 50, -10 )
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockPivot/Area2D"]
position = Vector2( 10, 8.5 )
shape = SubResource( 3 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="Dash" parent="." instance=ExtResource( 5 )]

[node name="Jump" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/attack = SubResource( 6 )
anims/block = SubResource( 7 )
anims/dashNdodge = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/walk = SubResource( 10 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
